# x-tui

./: Cargo.toml  cspell.json
src/: bootstrapper.rs  controlflow.rs  lib.rs  main.rs  run.rs  split_word_wrap.rs  tdom.rs
src/bootstrapper/: app.rs  init.rs  prefix_sum_2d.rs  shared_ctx.rs  test.rs
src/bootstrapper/shared_ctx/: console.rs  eq.rs  quit.rs  rb.rs  region.rs  terminal.rs  test.rs
src/bootstrapper/snapshots/: x_tui__bootstrapper__test__base.snap  x_tui__bootstrapper__test__each-basics-0.snap  x_tui__bootstrapper__test__each-basics-1.snap  x_tui__bootstrapper__test__each-basics-2.snap
