[package]
name = "x-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.26"
leptos_reactive = "0.2"
chrono = "0.4"

[dev-dependencies]
insta = { version = "1.28.0", features = ["yaml"] }

